components/Panels/PanelContent/PanelContent.module.scss
@import '../../../styles/variables.scss';

.wrapper {
    background-color: $color-gray-9;
    border: 1px solid $color-gray-7;
    border-radius: 0 0 $border-radius-panel $border-radius-panel;
    border-top: none;
    padding: $panel-padding-small;

    &:only-child {
        background-color: $color-gray-8;
        border-radius: $border-radius-panel;
        border-top: 1px solid $color-gray-7;
    }

    &.nopadding {
        padding: 0;
    }

    @media (min-width: $breakpoint-1) {
        padding: $panel-padding-large;
    }
}

